force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__PriceEditable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PriceEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating if this line item&#39;s price is editable.</description>
        <inlineHelpText>Select the checkbox to indicate that this line item&#39;s price is editable.</inlineHelpText>
        <label>Price Editable</label>
        <type>Checkbox</type>
    </CustomField>