force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__PricingMethod__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PricingMethod__c</fullName>
        <description>Determines how the price for this line item is set. List means it&#39;s calculated by subtracting discount from list price. Cost means it&#39;s calculated by adding markup to cost.</description>
        <inlineHelpText>Indicates how the price for this line item is calculated: List, by subtracting discount from list price or Cost, by adding markup to cost.</inlineHelpText>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>