force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__PricingMethodEditable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PricingMethodEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether pricing method can be edited on this line item.</description>
        <inlineHelpText>Select the checkbox to specify that the pricing method can be edited on this line item.</inlineHelpText>
        <label>Pricing Method Editable</label>
        <type>Checkbox</type>
    </CustomField>