force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__ProductFamily__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductFamily__c</fullName>
        <description>Product Family for the product referenced by this line item.</description>
        <formula>TEXT(SBQQ__Product__r.Family)</formula>
        <inlineHelpText>Product Family for the product referenced by this line item.</inlineHelpText>
        <label>Product Family</label>
        <type>Text</type>
    </CustomField>