force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__ProductName__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductName__c</fullName>
        <description>Name for the product referenced by this line item.</description>
        <formula>SBQQ__Product__r.Name</formula>
        <inlineHelpText>Name for the product referenced by this line item.</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </CustomField>