force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__ProratedListPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProratedListPrice__c</fullName>
        <description>Prorated list unit price.</description>
        <inlineHelpText>Prorated list unit price.</inlineHelpText>
        <label>Prorated List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>