force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__ProratedPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProratedPrice__c</fullName>
        <description>Prorated price for the product quoted by this line item. This price will only differ from Special Price if the product is a subscription and the line item is being prorated.</description>
        <inlineHelpText>Prorated price for the product quoted by this line item. This price will only differ from Special Price if the product is a subscription and the line item is being prorated.</inlineHelpText>
        <label>Prorated Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>