force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__Quote__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Quote__c</fullName>
        <description>Parent quote record.</description>
        <inlineHelpText>Parent quote record.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__WebQuote__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>