force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__RegularPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RegularPrice__c</fullName>
        <description>Unit price before additional discounts are applied.</description>
        <inlineHelpText>Unit price before additional discounts are applied.</inlineHelpText>
        <label>Regular Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>