force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__RegularTotal__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RegularTotal__c</fullName>
        <formula>IF(SBQQ__Renewal__c, 0, SBQQ__RegularPrice__c * SBQQ__EffectiveQuantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regular Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>