force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__RenewedAsset__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RenewedAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset being renewed if this line item represents a product renewal.</description>
        <inlineHelpText>Asset being renewed if this line item represents a product renewal.</inlineHelpText>
        <label>Renewed Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>WebQuoteLines</relationshipName>
        <type>Lookup</type>
    </CustomField>