force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__RequiredBy__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RequiredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links this line to another line in the same quote whose product requires this line&#39;s product.</description>
        <inlineHelpText>Indicates which other product on this quote requires it.</inlineHelpText>
        <label>Required By</label>
        <referenceTo>SBQQ__WebQuoteLine__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>WebQuoteLines</relationshipName>
        <type>Lookup</type>
    </CustomField>