force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__SegmentKey__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SegmentKey__c</fullName>
        <description>This represents the segment that contains a unique value.</description>
        <inlineHelpText>This represents the segment that contains a unique value.</inlineHelpText>
        <label>Segment Key</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>