force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__SegmentLabel__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SegmentLabel__c</fullName>
        <description>This is the Column header label associated with this line.</description>
        <inlineHelpText>This is the Column header label associated with this line.</inlineHelpText>
        <label>Segment Label</label>
        <length>25</length>
        <type>Text</type>
    </CustomField>