force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__Source__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source of cloned quote line.</description>
        <inlineHelpText>Source quote line item of cloned quote line item, if any.</inlineHelpText>
        <label>Source</label>
        <referenceTo>SBQQ__WebQuoteLine__c</referenceTo>
        <relationshipLabel>Web Quote Lines (Source)</relationshipLabel>
        <relationshipName>WebClones</relationshipName>
        <type>Lookup</type>
    </CustomField>