force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__SpecialPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SpecialPrice__c</fullName>
        <description>Special (volume-discounted or contracted) unit price for the product being quoted by this line item.</description>
        <inlineHelpText>Special unit price for this line item, such as volume discount or contracted price.</inlineHelpText>
        <label>Special Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>