force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__SpecialPriceType__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SpecialPriceType__c</fullName>
        <description>Stores the type of special price offered on this line item. Null value indicates there is no special pricing. Under normal circumstances this field should not be modified via UI.</description>
        <inlineHelpText>Type of special pricing extended.</inlineHelpText>
        <label>Special Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contracted Price</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Volume Discount</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>