force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__StartDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__StartDate__c</fullName>
        <description>Date the service represented by this line item will begin (only applies if product is a subscription).</description>
        <inlineHelpText>The date the subscription for which this product begins.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </CustomField>