force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__SubscribedAssetIds__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubscribedAssetIds__c</fullName>
        <description>Comma separated list of asset IDs covered by this subscription line. Only applicable to renewal quotes.</description>
        <inlineHelpText>List of assets covered by this subscription line item. Do not update unless instructed.</inlineHelpText>
        <label>Subscribed Asset IDs</label>
        <length>19000</length>
        <type>LongTextArea</type>
    </CustomField>