force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__SubscriptionBase__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubscriptionBase__c</fullName>
        <description>Determines whether dynamic subscriptions are calculated off List, Customer or Net product price.</description>
        <inlineHelpText>Indicates if subscription pricing uses List, Customer, or Net price.</inlineHelpText>
        <label>Subscription Base</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>