force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__SubscriptionCategory__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubscriptionCategory__c</fullName>
        <description>Category defined on the product to limit percent-of-total calculations to certain products.</description>
        <inlineHelpText>Category defined on the product to limit percent-of-total calculations to certain products.</inlineHelpText>
        <label>Subscription Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>