force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__SubscriptionPercent__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubscriptionPercent__c</fullName>
        <description>Percent of non-subscription product total to be used as the price of this subscription.</description>
        <inlineHelpText>Percent of non-subscription product total to be used when calculating this line item price.</inlineHelpText>
        <label>Subscription Percent</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Percent</type>
    </CustomField>