force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__SubscriptionScope__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubscriptionScope__c</fullName>
        <description>Determines how dynamic subscription prices are calculated. If scope is set to &quot;Quote&quot; any non-subscription product is used in calculating every dynamic subscription. If scope is set to &quot;Group&quot; only products in the same group as the dynamic subscription are used.</description>
        <inlineHelpText>Determines how dynamic subscription prices are calculated: Quote uses all the non-subscription products in the quote while Group uses only non-subscription products in the same group.</inlineHelpText>
        <label>Subscription Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>