force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__SubscriptionTargetPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubscriptionTargetPrice__c</fullName>
        <description>Price of the subscription target product on which maintenance should calculate.</description>
        <inlineHelpText>Price of the subscription target product on which maintenance should calculate.</inlineHelpText>
        <label>Subscription Target Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>