force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__SubscriptionTerm__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <description>Term for the subscription product in this line. If the product is not a subscription this value has no effect.</description>
        <inlineHelpText>Term for the subscription product in this line. If the product is not a subscription this value has no effect.</inlineHelpText>
        <label>Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>