force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__Taxable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the line item is taxable.</description>
        <inlineHelpText>Select the checkbox to indicate that the line item is taxable.</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </CustomField>