force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__TermDiscount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TermDiscount__c</fullName>
        <description>Discount calculated by applying subscription term against term discount schedule.</description>
        <inlineHelpText>Discount calculated by applying subscription term against term discount schedule.</inlineHelpText>
        <label>Term Discount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>