force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__TermDiscountSchedule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule for discounts based on subscription term.</description>
        <inlineHelpText>Schedule for discounts based on subscription term.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Web Quote Lines (Term Discounted)</relationshipLabel>
        <relationshipName>TermDiscountedWebQuoteLines</relationshipName>
        <type>Lookup</type>
    </CustomField>