force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__TermDiscountTier__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TermDiscountTier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tier within the term discount schedule used to discount this line item.</description>
        <inlineHelpText>Tier within the term discount schedule used to discount this line item.</inlineHelpText>
        <label>Term Discount Tier</label>
        <referenceTo>SBQQ__DiscountTier__c</referenceTo>
        <relationshipLabel>Web Quote Lines (Term Discounted)</relationshipLabel>
        <relationshipName>TermDiscountedWebQuoteLines</relationshipName>
        <type>Lookup</type>
    </CustomField>