force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__UnitCost__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UnitCost__c</fullName>
        <description>Cost for one unit of product quoted on this line item.</description>
        <inlineHelpText>Cost for one unit of product quoted on this line item.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>