force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__UpgradedAsset__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UpgradedAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset being upgraded by this quote line. Only populated if this quote line represents an upgrade.</description>
        <inlineHelpText>Asset upgraded by this quote line. When the quote is contracted this asset&#39;s Usage End Date will be populated to indicate that it&#39;s retired.</inlineHelpText>
        <label>Upgraded Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Web Quote Lines (Upgrade)</relationshipLabel>
        <relationshipName>UpgradeWebLines</relationshipName>
        <type>Lookup</type>
    </CustomField>