force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__UpgradedSubscription__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UpgradedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription being upgraded by this quote line.</description>
        <inlineHelpText>Subscription upgraded by this quote line. When the quote is contracted this subscription&#39;s Terminated Date field will be populated.</inlineHelpText>
        <label>Upgraded Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Web Quote Lines (Upgrade)</relationshipLabel>
        <relationshipName>UpgradeWebLines</relationshipName>
        <type>Lookup</type>
    </CustomField>