force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__Uplift__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Uplift__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>This is measured as a percent.</description>
        <inlineHelpText>Enter this as a percent.</inlineHelpText>
        <label>Uplift</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </CustomField>