force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__UpliftAmount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UpliftAmount__c</fullName>
        <description>This is measured as a currency amount. This is a system-calculated field and Uplift can only be applied in %.</description>
        <inlineHelpText>This is measured as a currency amount.</inlineHelpText>
        <label>Uplift (Amt)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>