force-app/main/default/objects/SBQQ__WebQuoteLine__c/fields/SBQQ__VolumeDiscount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__VolumeDiscount__c</fullName>
        <description>Volume discount in amount of Opportunity&#39;s currency applied to this line item.</description>
        <inlineHelpText>Volume discount amount applied to this line item.</inlineHelpText>
        <label>Volume Discount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>